src/objects/Case_formula_helper__c.object
<CustomObject>
    <fields>
        <fullName>AccProcessType_Reason1_Helper__c</fullName>
        <description>used to compute the value of reason1 used by acc process type field</description>
        <label>AccProcessType_Reason1_Helper</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI1_Reason1_Helper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>used to compute the value of Reason1, used by KPI1 field</description>
        <label>KPI1_Reason1_Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI1_RecordType_Helper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>used to compute the value of recordtype used by KPI1 field</description>
        <label>KPI1_RecordType_Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI2_Reason1_Helper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>used to compute the value of reason1 used by KPI2 field</description>
        <label>KPI2_Reason1_Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI2_RecordType_Helper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>used to compute the value of recordtype used by KPI2 field</description>
        <label>KPI2_RecordType_Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessAge_Reason1_Helper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>used to compute the value of reason1 used by process age field</description>
        <label>ProcessAge_Reason1_Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>used as unique id during upsert. Contains the Case Id</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case formula helper</relationshipLabel>
        <relationshipName>Case_formula_helper</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Case formula helper</label>
    <nameField>
        <displayFormat>CFE{000000000}</displayFormat>
        <label>Case formula helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case formula helper</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>